# perfect-wordle

./: .hlint.yaml  README.md  cabal.project  flake.nix  hie.yaml  perfect-wordle.cabal  pkgs.nix
.github/workflows/: CI.yaml
app/: Main.hs
src/: Lib.hs  Solvers.hs
test/: Spec.hs
