cabal-version:   2.4
name:            perfect-wordle
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2022 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files: README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/perfect-wordle#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/perfect-wordle.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -O2

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Lib
    Solvers

  build-depends:
    , containers
    , mtl
    , parallel

executable perfect-wordle
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  perfect-wordle
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
